make sketch solution more visible, try to fix continue race condition again

--- a/src/vs/editor/contrib/inlineCompletions/browser/ghostText.css
+++ b/src/vs/editor/contrib/inlineCompletions/browser/ghostText.css
@@ -40,7 +40,7 @@
 .monaco-editor .ghost-text-decoration,
 .monaco-editor .ghost-text-decoration-preview,
 .monaco-editor .suggest-preview-text .ghost-text {
-	color: var(--vscode-editorGhostText-foreground) !important;
+	color: rgba(255, 255, 255, 0.5) !important;
 	background-color: var(--vscode-editorGhostText-background);
 	border: 1px solid var(--vscode-editorGhostText-border);
 }
@@ -48,7 +48,7 @@
 .monaco-editor .desynt-ghost-text-decoration,
 .monaco-editor .desynt-ghost-text-decoration-preview,
 .monaco-editor .desynt-suggest-preview-text .desynt-ghost-text {
-	color: var(--vscode-editorGhostText-foreground) !important;
+	color: rgba(255, 255, 255, 0.5) !important;
 	background-color: var(--vscode-editorGhostText-background);
 	border: 1px solid var(--vscode-editorGhostText-border);
 	margin-left: -1.1em;
@@ -56,7 +56,7 @@
 }
 
 .monaco-editor .desynt-ghost-text-decoration-preview-striked {
-	color: var(--vscode-editorGhostText-foreground) !important;
+	color: rgba(255, 255, 255, 0.5) !important;
 	background-color: var(--vscode-editorGhostText-background);
 	border: 1px solid var(--vscode-editorGhostText-border);
 	margin-left: -1.1em;
